# rsaeb

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  context7.json
.github/workflows/: ci.yml
crates/aeb-cli/: Cargo.toml
crates/aeb-cli/src/: main.rs
examples/: basic.ab  compact.ab  return.ab
src/: allocation.rs  bytes.rs  error.rs  execution.rs  input.rs  inspect.rs  lib.rs  limits.rs  main.rs  materialized.rs  parser.rs  policy.rs  program.rs  rule.rs  runtime.rs  source.rs  syntax.rs  test_support.rs  trace.rs
src/bytes/: compact.rs  count.rs  mod.rs  payload.rs  program.rs  rejection.rs  runtime.rs  tests.rs
src/error/: fmt.rs  mod.rs  parse.rs  run.rs  traced.rs
src/execution/: admission.rs  advance.rs  attempt.rs  construction.rs  debug.rs  engine.rs  mod.rs  mode.rs  session.rs  transition.rs  witness.rs
src/parser/: line.rs  location.rs  mod.rs  rule_line.rs  tests.rs
src/program/: executable.rs  limits.rs  mod.rs  result.rs  rule_set.rs  tests.rs  tracing.rs
src/rule/: canonical.rs  mod.rs  model.rs
src/runtime/: action.rs  budget.rs  execution.rs  input.rs  matcher.rs  mod.rs  once.rs  rewrite.rs  runner.rs  session.rs  state.rs  terminal.rs  tests.rs
tests/: public_errors.rs  public_execution.rs  public_inspect.rs  public_limits.rs  public_program.rs  public_run.rs  public_runtime_input.rs  public_trace.rs
tests/support/: mod.rs  runtime.rs
