[package]
name = "rsaeb"
version = "0.5.0"
edition = "2024"
rust-version = "1.90"
description = "A no_std + alloc interpreter for A=B ordered rewrite programs."
readme = "README.md"
repository = "https://github.com/jungamer-64/rsaeb"
documentation = "https://docs.rs/rsaeb"
license = "MIT OR Apache-2.0"
keywords = ["a-b", "interpreter", "rewrite", "no-std"]
include = [
    "/src/**",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/clippy.toml",
]

[package.metadata.docs.rs]
all-features = true
