[package]
name = "rsaeb"
version = "0.8.0"
edition = "2024"
rust-version = "1.90"
description = "A no_std + alloc interpreter for A=B ordered rewrite programs."
readme = "README.md"
repository = "https://github.com/jungamer-64/rsaeb"
documentation = "https://docs.rs/rsaeb"
license = "MIT OR Apache-2.0"
keywords = ["a-b", "interpreter", "rewrite", "no-std"]
categories = ["compilers", "parser-implementations", "no-std"]
include = [
    "/src/**",
    "/tests/**",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/clippy.toml",
]

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
unconditional_panic = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"

[lints.clippy]
panic = "deny"
panic_in_result_fn = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
arithmetic_side_effects = "deny"

[package.metadata.docs.rs]
all-features = true
