[package]
name = "rsaeb"
version = "0.9.0"
edition = "2024"
rust-version = "1.90"
description = "A no_std + alloc interpreter for A=B ordered rewrite programs."
readme = "README.md"
repository = "https://github.com/jungamer-64/rsaeb"
documentation = "https://docs.rs/rsaeb"
license = "MIT OR Apache-2.0"
keywords = ["a-b", "interpreter", "rewrite", "no-std"]
categories = ["compilers", "parser-implementations", "no-std"]
include = [
    "/src/**",
    "/tests/**",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/clippy.toml",
]

[lints.rust]
warnings = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unsafe_code = "forbid"
unconditional_panic = "deny"
unused_must_use = "deny"
unfulfilled_lint_expectations = "deny"
unknown_lints = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
missing_crate_level_docs = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
private_doc_tests = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"


[lints.clippy]
panic = "deny"
panic_in_result_fn = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
arithmetic_side_effects = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_docs_in_private_items = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
alloc_instead_of_core = "deny"
as_conversions = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
large_stack_frames = "deny"
large_stack_arrays = "deny"

[package.metadata.docs.rs]
all-features = true
